tests/snapshots/snapshot_tests__array_init_batches.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_batches.vmt",
    status: Panic,
    used_instantiations: [],
}
