tests/snapshots/snapshot_tests__array_init_batches_ind.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_batches_ind.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 Z i) Z) i)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 Z i) Z) (Read-Int-Int Array-Int-Int!val!1 Z))",
    ],
}
